ME-2407 fixed IE When click on a text box in login and registration pages in Glamour app, alignments are changed Glamour,headphone,Crush

--- a/initData/previewData/meServerFiles/unknownUser/templates/586cd655641694232165c19c/css/style.css
+++ b/initData/previewData/meServerFiles/unknownUser/templates/586cd655641694232165c19c/css/style.css
@@ -267,3 +267,6 @@ input[type=number] {
 input {
     width: 100%;
 }
+.login .item {
+    width: auto;
+}
